--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
+  <h1 class="text-3xl font-bold">
+    SHRB Lab Purple Air Finder
   </h1>
 </body>
 </html>
