--- a/src/login.html
+++ b/src/login.html
@@ -6,29 +6,33 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <header>
-    <p id="headerNote" style="color: orange">shrb lab website</p>
+  <header class="flex justify-center" style="width:600px; height: 100px; margin:0 auto;">
+      <img src="./shrblogo.png" alt="lab logo">
   </header>
   <h1 class="text-3xl font-bold text-center" id="loginLabel">
     Login Page
   </h1>
   <div class="loginContainer w-full max-w-xs mx-auto flex flex-col items-center">
-    <div>
-        <label for="school" id="p1">School Name</label>
-        <input type="text" placeholder="Enter School Name" name="school" id="school" required>
+    <div class="w-full">
+        <label for="school" id="p1" class="text-lg block mb-2">School Name</label>
+        <input type="text" placeholder="Enter School Name" name="school" id="school" required class="text-lg w-full p-2 border rounded-md" style="padding: 8px;">
     </div>
 
-    <div>
-        <label for="password" id="p2">Password</label>
-        <input type="password" placeholder="Enter Password" name="password" id="password" required>
+    <div class="flex flex-row" style="padding: 15px;">
+      <button type="button" id="continueButton" class="bi-[#007bff] text-black font-fold py-[10px] px-[15px] rounded-[5px] cursor-pointer hover:bg-[#0056b3] rounded-full border">Continue</button>
     </div>
 
-    <div class="flex flex-row">
-        <button type="submit" id="loginButton" class="bi-[#007bff] text-black font-fold py-[10px] px-[15px] rounded-[5px] cursor-pointer hover:bg-[#0056b3]">Login</button>
+    <div id="passwordContainer" class="p-8 w-full" style="display: none">
+        <label for="password" id="p2" class="text-lg block mb-2">Password</label>
+        <input type="password" placeholder="Enter Password" name="password" id="password" required class="text-lg w-full p-2 border rounded-md" style="padding: 8px;">
     </div>
 
-    <label>
-        <input type="checkbox" checked="checked" name="remember" id="rememberMe">Remember me
+    <div id="loginButtonContainer" class="flex flex-row" style="padding: 15px; display: none">
+        <button type="submit" id="loginButton" class="bi-[#007bff] text-black font-fold py-[10px] px-[15px] rounded-[5px] cursor-pointer hover:bg-[#0056b3] rounded-full border">Login</button>
+    </div>
+
+    <label id="rememberMeContainer" style="display: none">
+        <input type="checkbox" checked="checked" name="remember" id="rememberMe" style="padding: 10px;">Remember me
     </label>
 
     <p id="statusMessage" style="color: red;"></p>
@@ -38,21 +42,42 @@
   </footer>
 
   <script>
-    const loginButton = document.getElementById("loginButton");
     const schoolInput = document.getElementById("school");
     const passwordInput = document.getElementById("password");
-    const checkbox = document.getElementById("rememberMe");
+
+    const checkbox = document.getElementById("rememberMeContainer");
+    const passwordContainer = document.getElementById("passwordContainer");
+    const continueButton = document.getElementById("continueButton");
+    const loginButtonContainer = document.getElementById("loginButtonContainer");
+
+    const loginButton = document.getElementById("loginButton");
+
+    let schoolNames = ['Bellview', 'Batcheller', 'Briscoe', 'Church', 'Ruch'];
+    let actualPassword = 'oberon';
+
+    continueButton.addEventListener("click", function() {
+      const school = schoolInput.value.trim();
+
+      if(schoolNames.includes(school)) {
+        passwordContainer.style.display = "block";
+        loginButtonContainer.style.display = "flex";
+        checkbox.style.display = "flex";
+
+        continueButton.style.display = "none";
+      } else {
+        statusMessage.textContent = "Error: School name incorrect";
+        statusMessage.style.color = "red";
+      }
+    });
 
     loginButton.addEventListener("click", async function(event) {
         event.preventDefault();
 
         const school = schoolInput.value.trim();
         const password = passwordInput.value.trim();
-        let schoolNames = ['Bellview', 'Batcheller', 'Briscoe', 'Church', 'Montessori', 'Ruch', 'ScienceWorks']
-        let found = false;
-    
+  
         function isSchoolValid() {
-            if(!schoolNames.includes(school) || !password) {
+            if(!schoolNames.includes(school)) {
                 statusMessage.textConent = "Error: school name incorrect";
                 statusMessage.style.color = "red";
                 return false;
